# faith

./: .rules  Cargo.toml  README.md  browser-wrapper.mjs  browser.js  build-test.sh  build.rs  example.js  faith.wasi-browser.js  faith.wasi.cjs  index.d.ts  index.js  package-lock.json  package.json  wrapper-factory.js  wrapper.d.ts  wrapper.js  wrapper.mjs
.cargo/: config.toml
.github/workflows/: publish.yml  test.yml
examples/: basic-usage.js  streaming.js
motivation/: .gitignore  Containerfile  Dockerfile  README.md  bench-data.json  bench.mjs  faith.js  faith.mjs  minimal.rs  native-fetch.js  netrace.sh  node-fetch.js  opencap.sh  package-lock.json  package.json  reqw12.rs  reqw13.rs  visualise.mjs  visualise.mjs.orig
motivation/charts/: bytes_per_packet.gnuplot  bytes_per_packet_data.txt  bytes_per_packet_zero.gnuplot  bytes_per_request.gnuplot  bytes_per_request_data.txt  bytes_per_request_zero.gnuplot  connections_per_request.gnuplot  connections_per_request_data.txt  connections_per_request_zero.gnuplot  cross_target_faith.gnuplot  cross_target_faith_data.txt  cross_target_faith_zero.gnuplot  dns_queries.gnuplot  dns_queries_data.txt  dns_queries_zero.gnuplot  dns_responses.gnuplot  dns_responses_data.txt  dns_responses_zero.gnuplot  impl_comparison_cloudflare_100k.gnuplot  impl_comparison_cloudflare_100k_data.txt  impl_comparison_cloudflare_100k_zero.gnuplot  impl_comparison_google.gnuplot  impl_comparison_google_data.txt  impl_comparison_google_zero.gnuplot  impl_comparison_local.gnuplot  impl_comparison_local_data.txt  impl_comparison_local_zero.gnuplot  impl_comparison_tamanu_k8.gnuplot  impl_comparison_tamanu_k8_data.txt  impl_comparison_tamanu_k8_zero.gnuplot  impl_comparison_tamanu_ka.gnuplot  impl_comparison_tamanu_ka_data.txt  impl_comparison_tamanu_ka_zero.gnuplot  impl_comparison_tamanu_og.gnuplot  impl_comparison_tamanu_og_data.txt  impl_comparison_tamanu_og_zero.gnuplot  packet_efficiency.gnuplot  packet_efficiency_data.txt  packet_efficiency_zero.gnuplot  packet_stats.txt  (+55 more)
src/: agent.rs  alt_svc.rs  async_task.rs  body.rs  conn_tracker.rs  error.rs  fetch.rs  integrity.rs  lib.rs  netlink.rs  options.rs  response.rs  stream_body.rs
src/conn_tracker/: linux.rs  macos.rs  windows.rs
test/: abort-signal.test.js  agent-dns.test.js  agent-headers.test.js  agent-redirect.test.js  agent-stats.test.js  agent-timeout.test.js  agent.test.js  arraybuffer.test.js  basic-get.test.js  blob.test.js  body-access.test.js  body-connection.test.js  cache.test.js  clone.test.js  compare.js  comparison.test.js  compression.test.js  conn-stats.test.js  connection-reuse.test.js  cookies.test.js  credentials.test.js  custom-headers.test.js  duplex.test.js  error-codes.test.js  error-responses.test.js  headers.test.js  helpers.js  http-methods.test.js  integrity.test.js  json.test.js  peer.test.js  post-requests.test.js  query-params.test.js  response-properties.test.js  response-text.test.js  simple.test.js  stream-body.test.js  stream.test.js  test.js  timeout.test.js  (+3 more)
test/fixtures/: connection-tracker.js
test/integration/: badssl.test.js  http-versions.test.js  ip-versions.test.js
