[package]
name = "faith"
version = "0.0.0"
edition = "2024"
description = "fáith: a Rust-powered JS fetch"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
napi = { version = "3.7.0", features = ["napi9", "serde-json", "tokio_rt", "web_stream"] }
napi-derive = "3.4.0"
reqwest = { version = "0.12.25", features = [
    "brotli",
    "deflate",
    "gzip",
    "hickory-dns",
    "json",
    "rustls-tls-webpki-roots",
    "stream",
    "zstd",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stream_shared = { version = "0.8.5", features = ["stats"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.10", features = ["io"] }

[build-dependencies]
napi-build = "2.3.1"
