[package]
name = "faith"
version = "0.2.1"
edition = "2024"
description = "fáith: a Rust-powered JS fetch"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bytes = "1.9.0"
futures = "0.3.31"
moka = { version = "0.12", features = ["sync"] }
http = "1.4.0"
http-body-util = "0.1.3"
http-cache-reqwest = { version = "0.16.0", features = ["manager-cacache", "manager-moka"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
libc = "0.2.179"
napi = { version = "3.7.0", features = ["napi9", "serde-json", "tokio_rt", "web_stream"] }
napi-derive = "3.4.0"
reqwest = { version = "0.12.28", default-features = false, features = [
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "hickory-dns",
    "http2",
    "json",
    "rustls-tls-native-roots-no-provider",
    "rustls-tls-webpki-roots",
    "stream",
    "system-proxy",
    "zstd",
] }
reqwest-middleware = { version = "0.4.2", features = ["http2", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ssri = "9.2.0"
stream_shared = { version = "0.8.5", features = ["stats"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.10", features = ["io"] }

[replace]
"reqwest:0.12.28" = { git = "https://github.com/passcod/reqwest", branch = "v0.12-h3alpn" }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-sock-diag = { version = "0.4.2", features = ["rich_nlas"] }
netlink-sys = "0.8.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
napi-build = "2.3.1"

[features]
default = ["http3"]
http3 = ["reqwest/http3"]
